[tool.poetry]
name = "example-python-step"
version = "0.1.0"
description = "Example Python Workflow Step"
authors = ["Peter Evers <pevers90@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyfiglet = "^0.8.post1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
